# PoyectoNavegacion

./: .gitignore  1.txt  README.md  ReadMe.txt  aruco_dos_camaras.py  aruco_pose_cubo.py  aruco_pose_distancia.py  aruco_pose_guardar.py  aruco_realtime.py  aruco_test.py  calibrar_camara.py  camara_obs_virtual.py  captura_calibracion.py  captura_calibracion_debug.py  package-lock.json  package.json  parametros_calibracion.npz  poses_aruco.csv  poses_aruco_distancia.csv  poses_aruco_distancia_cam1.csv  poses_aruco_distancia_cam2.csv  probar_indices_camaras.py  prueba_cam1.py  prueba_cam3.py  prueba_dos_camaras.py  pyrightconfig.json  python prueba_obs_virtual.py
project/: pyproject.toml  pyrightconfig.json
project/calibration/: auto_stl_orientation_calibration.py  calibrate_camera.py  calibrate_instrument_orientation.py  calibration.npz  capture_calibration.py  instrument_alignment.json  instrument_marker_calibration.json  manual_alignment.py  manual_marker_calibration.py  manual_stl_alignment.py  reconstruct_instrument_board.py  select_calibration_images.py
project/camera/: camera.py
project/communication/: igtl_sender.py
project/filters/: smoothing.py
project/math3d/: transforms.py
project/navigation/: reference_frame.py  roles.py
project/scripts/: demo_segura.py  demo_tracking.py  demo_tracking_slicer.py  focus_test.py  inspect_camera.py  test_igtl_sender.py
project/tests/: test_transforms.py
project/tracking/: aruco_tracker.py  instrument_board.py  instrument_calibration.npz
project/utilities/: generate_printables.py  generate_printables6x6.py
(+88 files in other folders)
